@@ -48,6 +48,7 @@ Misc:
  - GUI: Screenshot dimensions are now passed through
  - GUI: Add back logging
  - PSP2: Add rumble for PS TV
+ - PSP2: Add fit-to-height screen mode
 
 0.4.1: (2016-07-11)
 Bugfixes:
